--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </div>
     <div class="container">
         <center>
-            <p style="color: whitesmoke;">Haa ye Gola Light hai. :)</p>
+            <p style="color: whitesmoke;">Haa ye Gola • Light hai. :)</p>
             <div class="bulb" id="bulb"></div>
             <button class="button" id="button" onclick="turnOn()">On</button>
         </center>
